fixed z-index

--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -46,7 +46,7 @@ body {
     // background-color: #10ac8570;
     height: 60px;
     // padding-left: 20px;
-    z-index: 10;
+    z-index: 5;
     .logo {
         a {
             display: inline-block;
@@ -112,7 +112,7 @@ body {
 .hamburger {
     display : block;
     position: fixed;
-    z-index : 3;
+    z-index : 9;
     right : 20px;
     top   : 5px;
     width : 42px;
